// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binary operation 1`] = `
Array [
  Object {
    "position": Array [
      0,
      0,
      0,
      1,
    ],
    "type": "Number",
    "value": "1",
  },
  Object {
    "position": Array [
      0,
      2,
      0,
      3,
    ],
    "type": "Operator",
    "value": "+",
  },
  Object {
    "position": Array [
      0,
      4,
      0,
      5,
    ],
    "type": "Number",
    "value": "2",
  },
]
`;

exports[`binary operation 2`] = `
Array [
  Object {
    "position": Array [
      0,
      0,
      0,
      1,
    ],
    "type": "Number",
    "value": "1",
  },
  Object {
    "position": Array [
      0,
      2,
      0,
      3,
    ],
    "type": "Operator",
    "value": "+",
  },
  Object {
    "position": Array [
      0,
      4,
      0,
      5,
    ],
    "type": "Number",
    "value": "2",
  },
  Object {
    "position": Array [
      0,
      6,
      0,
      7,
    ],
    "type": "Operator",
    "value": "-",
  },
  Object {
    "position": Array [
      0,
      8,
      0,
      9,
    ],
    "type": "Number",
    "value": "3",
  },
]
`;

exports[`binary operation 3`] = `
Array [
  Object {
    "position": Array [
      0,
      0,
      0,
      1,
    ],
    "type": "Number",
    "value": "1",
  },
  Object {
    "position": Array [
      0,
      1,
      0,
      2,
    ],
    "type": "Operator",
    "value": "+",
  },
  Object {
    "position": Array [
      0,
      2,
      0,
      3,
    ],
    "type": "Number",
    "value": "2",
  },
  Object {
    "position": Array [
      1,
      0,
      1,
      1,
    ],
    "type": "Operator",
    "value": "-",
  },
  Object {
    "position": Array [
      1,
      1,
      1,
      2,
    ],
    "type": "Number",
    "value": "3",
  },
  Object {
    "position": Array [
      3,
      0,
      3,
      1,
    ],
    "type": "Operator",
    "value": "+",
  },
  Object {
    "position": Array [
      3,
      1,
      3,
      2,
    ],
    "type": "Number",
    "value": "4",
  },
]
`;

exports[`variable declaration 1`] = `
Array [
  Object {
    "position": Array [
      0,
      0,
      0,
      3,
    ],
    "type": "Declarator",
    "value": "var",
  },
  Object {
    "position": Array [
      0,
      4,
      0,
      5,
    ],
    "type": "Identifier",
    "value": "a",
  },
  Object {
    "position": Array [
      0,
      6,
      0,
      7,
    ],
    "type": "Operator",
    "value": "=",
  },
  Object {
    "position": Array [
      0,
      8,
      0,
      9,
    ],
    "type": "Identifier",
    "value": "b",
  },
]
`;
